# DoubanSpider

./: .gitignore  README.md  pyproject.toml
res/apk/: 豆瓣_7.13.0.jadx  豆瓣_7.48.0.jadx
reverse/: get_sig_ts.java  zeno.java
src/: analysis.py  books_crawler.py  get_app_signature.py  get_headers.py  get_secret.py  get_signature.py  init_tables.py  insert_data.py  merge_db.py  movies_crawler.py  recommend_books.py  recommend_movies.py  sig_test.py  test.py  utilities.py
src/douban/: __init__.py
src/hook/: antiFrida.js  inject_frodoUtils.js  inject_topic_api.js
src/java/: AESCipher.java  SignatureHelper.java  getAppSignature.java
